<resources>
    <string name="app_name">Status</string>
    <string name="drawer_open">Status</string>
    <string name="drawer_close">Status</string>
    <string name="app_not_available">Status</string>
    <string name="title_activity_pw">PWActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!--  ==========  购物车模块开始  ==========  -->
    <string name="menu_del">删除</string>
    <string name="menu_sett">结算</string>

    <string name="menu_edit">编辑</string>
    <string name="menu_enter">完成</string>

    <!--  ==========  购物车模块结束  ==========  -->


    <!--  ==========  导航页模块开始  ==========  -->
    <string name="text_web_ceo">WEB ANALYTICS</string>

    <!--  ==========  导航页模块结束  ==========  -->


    <string-array name="magic_effect">
        <item>RotateDown</item>
        <item>RotateUp</item>
        <item>RotateY</item>
        <item>Standard</item>
        <item>Alpha</item>
        <item>ScaleIn</item>
        <item>RotateDown and Alpha</item>
        <item>RotateDown and Alpha And ScaleIn</item>
    </string-array>


    <string name="tips_not_wifi">You are currently using the mobile network, the player will continue to consume traffic</string>
    <string name="tips_not_wifi_confirm">Resume</string>
    <string name="tips_not_wifi_cancel">Stop play</string>
    <string name="no_url">No url</string>
    <string name="replay">Replay</string>
    <string name="click_to_restart">Click to try again</string>
    <string name="video_loading_faild">Video loading failed</string>


    <string name="VideoView_error_button">8787</string>
    <string name="VideoView_error_text_unknown">8887</string>
    <string name="VideoView_error_text_invalid_progressive_playback">899987</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="select">选择图片</string>
    <string name="object_name">请输入OSS文件名</string>
    <string name="normal">普通上传下载</string>
    <string name="download">下载</string>
    <string name="upload">上传</string>
    <string name="multipart_upload"> 上传</string>
    <string name="multipart_pause">暂停</string>
    <string name="multipart">断点续传上传</string>
    <string name="resize_width">缩略宽度</string>
    <string name="resize_height">缩略高度</string>
    <string name="settings">设置</string>
    <string name="resize">图片缩略</string>
    <string name="watermark">文字水印</string>
    <string name="watermark_hint">请输入水印文字</string>
    <string name="watermark_size">文字大小</string>
    <string name="stsserver">STS服务器地址</string>
    <string name="listObjects">listObjects</string>
    <string name="headObject">headObject</string>
    <string name="manageBuckets">manage</string>
    <string name="ossSign">ossSign</string>
    <string name="resumableUpload">resumable</string>
    <string name="multipartUpload">multipart</string>
    <string name="cutomSign">cutomsign</string>
    <string name="batch_upload">batch</string>
    <string name="trigger_callback">callback</string>
    <string name="image_persist">image persist</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Settings</string>
    <string name="sync_header">售卡设备</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Sync Preferences -->
    <string name="sync_title2">Sync email periodically2</string>
    <string name="attachment_title2">Download incoming attachments2</string>
    <string name="attachment_summary_on2">Automatically download attachments for incoming emails2</string>
    <string name="attachment_summary_off2">Only download attachments when manually requested2</string>

</resources>
